# documented

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  jeeves.py  macros.py  mkdocs.yml  objects.inv  pyproject.toml  roadmap.yaml  setup.cfg
.github/workflows/: deploy.yml  test.yml
alternatives/: index.html
compatibility/-OO/: index.html
compatibility/attrs/: index.html
compatibility/dataclasses/: index.html
compatibility/flake8-docstrings/: index.html
compatibility/pydantic/: index.html
compatibility/rich/: index.html
compatibility/self/: index.html
css/: custom.css
docs/: .pages  alternatives.md  compatibility.md  conf.py  docstring.md  fallback.md  formatting.md  index.md  philosophy.md  rationale.md  repr.md  templating.md  try-except.md
docs/_templates/: badges.html  github.html  moreinfo.html
docs/compatibility/: -OO.md  attrs.md  dataclasses.md  flake8-docstrings.md  pydantic.md  pylint.md  rich.md  self.md
docs/examples/: attrs_exception.py  pydantic_exception.py  recursion.py  rich-markdown.py  wizardry.py
docs/reference/: documented-error.md  documented.md
docstring/: index.html
documented/: __init__.py  documented.py  error.py  untouchable.py
documented/contrib/: rich_markdown.py
examples/: docstring.py  not_renderable.py  open-the-pod-bay-doors.py  pydantic_exception.py
fallback/: index.html
reference/documented/: index.html
reference/documented-error/: index.html
search/: search_index.json
templating/: index.html
tests/: common.py  conftest.py  test_documented.py  test_error.py  test_rich.py  test_untouchable.py
tests/test_example/: test_some_function.py
try-except/: index.html
