[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "documented"
version = "0.1.2"
description = "Templated docstrings for Python classes."
license = "MIT"

authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]

readme = "README.md"

repository = "https://github.com/anatoly-scherbakov/documented"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
pytest = "^7.2.0"
mkdocs-material = "^8.5.11"
mypy = "^0.991"
flakeheaven = "^3.2.1"

# This prevents flake8-commas from crashing.
setuptools = "^65.6.3"
add-trailing-comma = "^2.3.0"
safety = "^2.3.3"
pytest-cov = "^4.0.0"
mkdocs-macros-plugin = "^0.7.0"
plumbum = "^1.8.0"

[tool.flakeheaven.exceptions."**/__init__.py"]
pyflakes = ["-F401"]
