[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "documented"
version = "0.1.4"
description = "Templated docstrings for Python classes."
license = "MIT"

authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]

readme = "README.md"

repository = "https://github.com/anatoly-scherbakov/documented"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]

# This prevents flake8-commas from crashing.
mkdocs-macros-plugin = "^0.7.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
attrs = "^22.1.0"
pydantic = "^1.10.2"
jeeves-yeti-pyproject = {version = "^0.2.25", python = ">=3.10"}

[tool.flakeheaven.exceptions."**/__init__.py"]
pyflakes = ["-F401"]
