[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "documented"
version = "0.1.3"
description = "Templated docstrings for Python classes."
license = "MIT"

authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]

readme = "README.md"

repository = "https://github.com/anatoly-scherbakov/documented"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^8.5.11"

# This prevents flake8-commas from crashing.
mkdocs-macros-plugin = ">=0.7,<1.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
attrs = "^22.1.0"
pydantic = "^1.10.2"
jeeves-yeti-pyproject = "^0.1.1"

[tool.flakeheaven.exceptions."**/__init__.py"]
pyflakes = ["-F401"]
